Fix: Moved Footer into individual components to allow Keyboard to be above it
Even through the adjustment of z-index the Footer and Keyboard needed to be rendered in the same component for the Keyboard to appear above it.

--- a/frontend/src/css/material-kit.css
+++ b/frontend/src/css/material-kit.css
@@ -22733,6 +22733,7 @@ label,
   text-align: center;
   border-top: 2px solid #000;
   opacity: 0.9;
+  z-index: 40;
 }
 
 .footer .nav-link {
